# yiot-yocto-test

./: README.md  transitive-args.cmake
cmake/: vsplatforms.cmake
ext/iotkit/: library.json
ext/yiot-core/: CMakeLists.txt  README.md
ext/yiot-core/iotkit/: .gitignore
ext/yiot-core/iotkit/integration/qt/facade/src/helpers/: VSQDeviceType.cpp  VSQIoTKitFacade.cpp  VSQMac.cpp
ext/yiot-core/iotkit/sdk/: CMakeLists.txt
ext/yiot-core/iotkit/sdk/cmake/: OpenWRT.cmake  TransitiveToolchainArgs.cmake
ext/yiot-core/iotkit/sdk/cmake/toolchain/: apple.cmake
ext/yiot-core/iotkit/sdk/ext/aws-sdk/aws-iot-device-sdk-embedded-C/: PortingGuide.md  README.md
ext/yiot-core/iotkit/sdk/ext/aws-sdk/aws-iot-device-sdk-embedded-C/samples/: README.md
ext/yiot-core/iotkit/sdk/helpers/: CMakeLists.txt
ext/yiot-core/iotkit/sdk/helpers/threadsafe/src/: vs-lock.c
ext/yiot-core/iotkit/sdk/modules/crypto/secmodule/src/: asn1-cryptogram.c
ext/yiot-core/iotkit/sdk/modules/crypto/session/src/: session.c
ext/yiot-core/iotkit/sdk/modules/logger/src/: logger.c
ext/yiot-core/iotkit/sdk/modules/protocols/snap/src/: snap.c
ext/yiot-core/iotkit/sdk/modules/provision/src/: provision.c
ext/yiot-core/iotkit/sdk/modules/provision/trust_list/: CMakeLists.txt
ext/yiot-core/iotkit/sdk/modules/secbox/src/: secbox.c
ext/yiot-core/iotkit/sdk/scripts/pkg/: SETTINGS  virgil-iotkit-tools-docker-push.sh  virgil-iotkit-tools-docker.sh  virgil-iotkit-tools-pkg.sh
ext/yiot-core/iotkit/sdk/scripts/pkg/Docker/: Docker-virgil-iotkit-tools
ext/yiot-core/iotkit/sdk/scripts/pkg/jenkins/: Jenkinsfile
ext/yiot-core/iotkit/sdk/scripts/pkg/mock/: centos-8.tpl
ext/yiot-core/iotkit/sdk/scripts/pkg/python-tinydb/scripts/: prep-src.sh
ext/yiot-core/iotkit/sdk/tools/: CMakeLists.txt
ext/yiot-core/iotkit/sdk/tools/yiot-firmware-signer/: CMakeLists.txt
ext/yiot-core/iotkit/sdk/tools/yiot-trust-provisioner/: setup.py  yiot-trust-provisioner.py
ext/yiot-core/iotkit/sdk/tools/yiot-trust-provisioner/samples/: provisioner.conf
ext/yiot-core/iotkit/sdk/tools/yiot-trust-provisioner/yiot_trust_provisioner/: __main__.py  core.py  ui.py  utility_manager.py
ext/yiot-core/yiot/common/: CMakeLists.txt
ext/yiot-core/yiot/common/qos1/: CMakeLists.txt
(+85 files in other folders)
